<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <View
        android:id="@+id/dragLine"
        style="@style/DragLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTypeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/feature_profile_setup_type_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/eminem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dragLine" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTypeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_48"
        android:layout_marginTop="@dimen/micro_margin"
        android:layout_marginEnd="@dimen/margin_48"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center"
        android:text="@string/feature_profile_setup_type_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/gray_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTypeTitle" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibLow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginTop="@dimen/margin_24"
        app:icon="@drawable/ic_extravagance"
        app:layout_constraintEnd_toStartOf="@id/ibMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTypeDescription"
        app:text="@string/feature_profile_setup_type_low" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/mini_margin"
        app:icon="@drawable/ic_extravagance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibLow"
        app:layout_constraintTop_toBottomOf="@id/tvTypeDescription"
        app:text="@string/feature_profile_setup_type_medium" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibHigh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/margin_24"
        app:icon="@drawable/ic_extravagance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ibElton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibLow"
        app:text="@string/feature_profile_setup_type_high" />

    <com.eratart.baseui.view.button.ItemButton
        android:id="@+id/ibElton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mini_margin"
        android:layout_marginBottom="@dimen/margin_24"
        app:icon="@drawable/ic_extravagance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ibHigh"
        app:layout_constraintTop_toBottomOf="@id/ibLow"
        app:text="@string/feature_profile_setup_type_elton" />

</androidx.constraintlayout.widget.ConstraintLayout>