<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_48"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/micro_margin"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center"
                android:text="@string/feature_profile_setup_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/eminem"
                app:layout_constraintBottom_toTopOf="@id/tvDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/margin_32"
                android:fontFamily="@font/manrope_regular"
                android:gravity="center"
                android:text="@string/feature_profile_setup_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/gray_80"
                app:layout_constraintBottom_toTopOf="@id/clAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAvatar"
                android:layout_width="@dimen/avatar_outline_size"
                android:layout_height="@dimen/avatar_outline_size"
                android:layout_marginBottom="@dimen/default_padding"
                android:background="@drawable/bg_avatar_outline"
                android:padding="@dimen/input_view_outline_stroke_width"
                app:layout_constraintBottom_toTopOf="@id/tivFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="@dimen/avatar_outline_radius"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/ivAvatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:id="@+id/btnSelectAvatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/fg_avatar"
                            android:foreground="?selectableItemBackground"
                            android:padding="@dimen/margin_32"
                            android:src="@drawable/ic_select_image" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.eratart.baseui.view.edittext.TextInputView
                android:id="@+id/tivFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/mini_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:hint="@string/feature_profile_setup_first_name"
                app:layout_constraintBottom_toTopOf="@id/sivClothesSex"
                app:layout_constraintEnd_toStartOf="@id/tivLastName"
                app:layout_constraintStart_toStartOf="parent" />

            <com.eratart.baseui.view.edittext.TextInputView
                android:id="@+id/tivLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mini_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:hint="@string/feature_profile_setup_last_name"
                app:layout_constraintBottom_toTopOf="@id/sivClothesSex"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tivFirstName" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivClothesSex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:icon="@drawable/ic_user"
                app:layout_constraintBottom_toTopOf="@id/tivNickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:title="@string/feature_profile_setup_clothes_sex" />

            <com.eratart.baseui.view.edittext.TextInputView
                android:id="@+id/tivNickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:hint="@string/feature_profile_setup_nickname"
                app:layout_constraintBottom_toTopOf="@id/tivBio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.eratart.baseui.view.edittext.TextInputView
                android:id="@+id/tivBio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:hint="@string/feature_profile_setup_bio"
                app:layout_constraintBottom_toTopOf="@id/sivClothesType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.eratart.baseui.view.other.SelectableItemView
                android:id="@+id/sivClothesType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:icon="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:title="@string/feature_profile_setup_clothes_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.eratart.baseui.view.button.FilledButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:isActive="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/feature_profile_setup_next" />
</androidx.constraintlayout.widget.ConstraintLayout>